# Android_RTReconstruction

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/net/zjucvg/rtreconstruction/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: convert.cpp  convert.h  native-lib.cpp  net_zjucvg_rtreconstruction_NativeVSLAM.cpp  net_zjucvg_rtreconstruction_NativeVSLAM.h  net_zjucvg_rtreconstruction_NativeVSLAM_Attitude.h  net_zjucvg_rtreconstruction_NativeVSLAM_Camera.h  net_zjucvg_rtreconstruction_NativeVSLAM_CameraIntrinsics.h  net_zjucvg_rtreconstruction_NativeVSLAM_Corners.h  net_zjucvg_rtreconstruction_NativeVSLAM_Frame.h  net_zjucvg_rtreconstruction_NativeVSLAM_IMU.h  net_zjucvg_rtreconstruction_NativeVSLAM_Image.h  net_zjucvg_rtreconstruction_NativeVSLAM_Size.h  net_zjucvg_rtreconstruction_NativeVSLAM_State.h  net_zjucvg_rtreconstruction_NativeVSLAM_TrackingResult.h  net_zjucvg_rtreconstruction_NativeVSLAM_VSLAMConfig.h  net_zjucvg_rtreconstruction_OpenCLUtility.cpp  net_zjucvg_rtreconstruction_OpenCLUtility.h
app/src/main/java/net/zjucvg/rtreconstruction/: AutoFitImageView.java  CameraReader.java  FrameSource.java  FrameWriter.java  IMUReader.java  MainActivity.java  MainFragment.java  NativeVSLAM.java  OfflineFrameSource.java  OfflineSourceSettingsActivity.java  OfflineSourceSettingsFragment.java  OnlineFrameSource.java  OpenCLUtility.java  PluginNative.java  RSUtility.java  Utility.java  (+4 more)
app/src/main/res/: fragment_main.xml
app/src/main/res/layout/: activity_main.xml  activity_offline_source_settings.xml  activity_settings.xml  fragment_main.xml
app/src/main/res/menu/: menu.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/xml/: offline_source_preference.xml  preference.xml
app/src/main/rs/: gray_to_rgba.rs  yuv420_to_rgba.rs
(+3 files in other folders)
